<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libfranka</name>
  <version>0.7.1</version> <description>Custom libfranka for legacy hardware</description>
  <maintainer email="alex@minor.pw">Alexander Minor</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
